# ieee-fraud-project

./: .gitignore  README.md  pyproject.toml  requirements-notebook.txt  requirements.txt
configs/: base.yaml  lr.yaml  rf.yaml  woe_lr.yaml  xgb.yaml
data/raw/: README.md
notebooks/: 01_eda.ipynb  02_feature_exploration.ipynb  03_iv_analysis.ipynb  04_model_interpretation.ipynb
scripts/: evaluate.py  explain.py  prepare_data.py  train.py
src/fraud_detection/: __init__.py  data.py  evaluate.py  explain.py  features.py  iv.py  models.py  pipeline.py  preprocessing.py  utils.py
tests/: test_data.py  test_evaluate.py  test_features.py  test_iv.py
