[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieee-fraud-detection"
version = "0.1.0"
description = "WOE-IV, XGBoost, and SHAP pipeline for IEEE-CIS Fraud Detection."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
